// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TokenImage /> adjusts size based on passed size prop 1`] = `
<svg
  height={200}
  version="1.1"
  width={200}
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <radialGradient
      id="fff000"
    >
      <stop
        offset="0%"
        stopColor="#fff"
      />
      <stop
        offset="100%"
        stopColor="#000"
      />
    </radialGradient>
  </defs>
  <circle
    cx={100}
    cy={100}
    fill="url(#fff000)"
    r={96}
    stroke="#fff"
    strokeWidth="2"
  />
</svg>
`;

exports[`<TokenImage /> renders and matches the snapshot 1`] = `
<svg
  height={100}
  version="1.1"
  width={100}
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <radialGradient
      id="fff000"
    >
      <stop
        offset="0%"
        stopColor="#fff"
      />
      <stop
        offset="100%"
        stopColor="#000"
      />
    </radialGradient>
  </defs>
  <circle
    cx={50}
    cy={50}
    fill="url(#fff000)"
    r={46}
    stroke="#fff"
    strokeWidth="2"
  />
</svg>
`;
